# monzo-sweeper

./: .pre-commit-config.yaml  Cargo.toml
.github/workflows/: CI.yml  coverage.yml
monz0-lib/: Cargo.toml
monz0-lib/src/: client.rs  ledger.rs  lib.rs  operation.rs  pot.rs  state.rs  transactions.rs
monz0-lib/src/client/: auto_refresh.rs
monz0-lib/src/ledger/: transactions.rs
monz0-lib/src/operation/: ratio.rs  sweep.rs
src/: app.rs  client.rs  config.rs  logging.rs  main.rs  operation.rs  state.rs  strategy.rs  transactions.rs
src/app/: run.rs  show.rs
src/client/: auto_refresh.rs
src/operation/: ratio.rs  sweep.rs  util.rs
