[package]
name = "monzo-sweeper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
futures-util = "0.3.15"
monzo-lib = { git = "https://github.com/danieleades/monzo-lib.git", branch = "0.3" }
rusty-money = {version = "0.4.1", features = ["iso"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
thiserror = "1.0.25"
tokio = { version = "1.6.1", features = ["rt-multi-thread", "macros", "sync"] }
