[package]
name = "monz0"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    ".",
    "monz0-lib",
]

[dependencies]
clap = { version = "3.0.12", features = ["derive"] }
anyhow = "1.0.64"
confy = { git = "https://github.com/rust-cli/confy.git", rev="664992aecd97b4af0eda8d9d2825885662e1c6b4", features = ["yaml_conf"], default_features = false}
monz0-lib = { path = "./monz0-lib" }
rusty-money = { version = "0.4.1", features = ["iso"] }
tokio = { version = "1.16.0", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
serde = { version = "1.0.133", features = ["derive"] }
indexmap = "1.8.0"

[dev-dependencies]
serde_yaml = "0.8.23"
