[package]
name = "monz0-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.15"
monzo-lib = "0.4.3"
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "1.0.25"
tokio = "1.15.0"
tracing = "0.1.26"

[dev-dependencies]
serde_yaml = "0.8.17"
