[package]
name = "monz0-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.19"
monzo-lib = "0.4.4"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.30"
tokio = "1.16.0"
tracing = "0.1.29"

[dev-dependencies]
serde_yaml = "0.8.23"
test-case = "1.2.1"
